# apc_ros

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  apc_ros.files  apc_ros.includes  package.xml  readme.md
apc_calibration/: CMakeLists.txt  calibrate_opencv.cpp  default.xml  package.xml
apc_config/: CMakeLists.txt  package.xml
apc_config/config/: active.json  calibration_pos.md  crichton_groups.yaml  example.json  oreo_mega_stuf.json  trial.json
apc_config/data/: plot_dump.m  read_ref.m  read_state.m
apc_control/: CMakeLists.txt  package.xml
apc_control/cmake/: FindAch.cmake  FindAmino.cmake  FindEigen.cmake  FindQcp.cmake  FindSns.cmake  FindTCLAP.cmake
apc_control/src/: apc_action_server.cpp  apc_arm_state_publisher.cc  apc_arm_trajectory_node.cc  apc_gripper_state_publisher.cc  apc_gripper_trajectory_node.cc  apc_state_publisher.cpp  apc_trajectory_bridge.cc  backward.cpp
apc_description/: CMakeLists.txt  package.xml
apc_description/crichton/: crichton.urdf.xacro
apc_description/data/: CMakeLists.txt
apc_description/urdf/: materials.urdf.xacro
apc_extrinsic_calibration/: CMakeLists.txt  calibrate_extrinsic.cpp  camera_calib.yaml  ir_passthrough.py  kinect_bottom_job.yaml  package.xml
apc_launch/: CMakeLists.txt  package.xml
apc_launch/launch/: apc_action_server.launch  apc_collision_checker.launch  apc_extrinsic_calib.launch  apc_kinect2.launch  apc_planning.launch  apc_pregrasp.launch  apc_real.launch  apc_sim.launch  apc_trajopt_server.launch  apc_zebra.launch  ar_track_crichton.launch  crichton.launch  crichton_head.launch  crichton_hw_state.launch  crichton_openni2.launch  crichton_trajectory_bridge.launch  crichton_trajectory_server.launch  kiva_pod.launch
apc_moveit/: CMakeLists.txt  package.xml
apc_moveit_config/: .setup_assistant  package.xml
apc_moveit_config/config/: crichton.srdf  crichton_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
apc_moveit_config/launch/: crichton_moveit_controller_manager.launch.xml  dbg_sim.launch  default_warehouse_db.launch  demo.launch  demo_movegroup.launch  demo_real.launch  demo_rviz.launch  demo_sim.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
apc_msgs/: CMakeLists.txt  package.xml
apc_msgs/action/: FollowPrimitivePlan.action
apc_msgs/msg/: BinInfo.msg  BinState.msg  DPMObject.msg  FrameState.msg  ItemSymmetry.msg  Object.msg  ObjectState.msg  OrientationConstraint.msg  PositionConstraint.msg  PrimitiveAction.msg  PrimitivePlan.msg  PrimitivePlanRequest.msg  PrimitivePlanResponse.msg  StoredObject.msg  StoredScene.msg  TactileSensor.msg  WorldState.msg
apc_msgs/msgs/: PrimitiveAction.msg
apc_msgs/srv/: CheckCollisions.srv  ComputeDenseMotion.srv  ComputeIk.srv  ComputePreGrasps.srv  CullCloudBackground.srv  GetCloudFrustum.srv  GetImage.srv  GetMesh.srv  GetMotionPlan.srv  GetPointCloud.srv  GetShelf.srv  RunDPM.srv  RunICP.srv  RunVision.srv  SegmentBin.srv  SegmentImage.srv  shot_detector_srv.srv
apc_object_detection/: CMakeLists.txt  config.yaml  object_detector.cpp  object_detector.h  optimized_poisson_textured_mesh.ply  package.xml  shot_detector.cpp  shot_detector.h  shot_detector.launch  spinimage.cpp  spinimage.cpp.autosave  spinimage.h
apc_pcl/: CMakeLists.txt  package.xml  setup.py
apc_pcl/calibration/: calib_pose.yaml
apc_pcl/calibration/501227442542/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
apc_pcl/calibration/503233542542/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml
apc_pcl/calibration/primesense/: calib_color.yaml  calib_depth.yaml
apc_pcl/launch/: pcl.launch
apc_pcl/matsrc/: apc_auto_train_histo.m  apc_bounding_box.m  apc_compare_distributions.m  apc_divergence.m  apc_get_distributions.m  apc_manual_train_histo.m  apc_segment.m  apc_test_histo.m  apc_train_histo.m  readme.md
apc_pcl/matsrc/analysis/: apc_emd.m  apc_pre_train.m  apc_segment.m
apc_pcl/matsrc/images/: apc_ready_workspace.m  apc_record_image.m
apc_pcl/matsrc/learning/: apc_auto_train_histo.m  apc_chunk_proc.m  apc_compare_distributions.m  apc_compute_distribution.m  apc_gather_data.m  apc_get_distributions.m  apc_get_divergences.m  apc_manual_train_histo.m  apc_teach_on_rec.m
apc_pcl/matsrc/visualization/: apc_bounding_box.m  apc_crop_histogram.m  apc_show_histogram.m  apc_whatwegot.m
apc_pcl/nodes/: cloud_test_client.py  frustrum_culling.cpp  frustum_cull_server.cpp  get_mesh_server.cpp  icp_node.cpp  pcl_functions.cpp  pcl_functions.h  segmentation_server.py  simulated_dpm.py  vision_server.py
apc_pcl/pcl_test/: CMakeLists.txt  package.xml  ros_test_pcl_node.cpp
apc_pcl/pysrc/apc_tools/: __init__.py  bin_segmenter.py  misc.py
apc_pcl/pysrc/apc_tools/utils/: __init__.py  path_tools.py  ros_image_tools.py  tf_helper.py
apc_pcl/src/: CMakeLists.txt  backward.cpp
apc_pcl/src/pcl_tools/: CMakeLists.txt  adv_registration.cpp  loading.cpp  pcl_functions.h  pcl_tools.h  registration.cpp  segmentation.cpp  transform.cpp  visualization.cpp
apc_pcl/src/test/: CMakeLists.txt  alignment_prerejective.cpp  alp_2.cpp  corresp_grouping.cpp  poisson.ply  test_closest_point.cpp  test_icp.cpp  test_rift.cpp  test_sac_icp.cpp  test_segmentation.cpp  test_textured_mesh.cpp  test_transform.cpp
apc_pcl/tools/: fake_vision_server.py  record_background.py
apc_planning/: CMakeLists.txt  package.xml
apc_planning/include/: backward.hpp
apc_planning/src/: apc_collision.cpp  apc_ik.cpp
apc_ros/: CMakeLists.txt  package.xml
apc_scripts/: CMakeLists.txt  package.xml  setup.py
apc_scripts/scripts/: apc  apc_image_grabber_service.py  apc_pointcloud_grabber_service.py  camera_transform_publisher  git_add_objects  reduce_meshes  reduce_meshes.mlx  rosbag_play  rotation_to_rpy.py  urdf_to_collada
apc_trajopt/: CMakeLists.txt  package.xml  setup.py
apc_trajopt/cmake/: Findgtest.cmake
apc_trajopt/data/: arm_around_table.json  numerical_ik1.json  (+1 more)
launch/: crichton.launch
script/: apc_convert2meters.py
(+564 files in other folders)
