<?xml version="1.0"?>
<package>
  <name>apc_pcl</name>
  <version>0.0.1</version>
  <description>The apc_pcl package</description>
  <maintainer email="jpanikul@gmail.com">Jacob Panikulam</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>apc_msgs</build_depend>
  <run_depend>apc_msgs</run_depend>


  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>